--- a/assignment_2_start.ipynb
+++ b/assignment_2_start.ipynb
@@ -234,7 +234,7 @@
     "\n",
     "The functions below are a simple test function for your code, it'll take in an input and an output and score the two. In your code, you'll have half of the inputs here, the expected results, and will need to write the rest of the code to generate your results and input them to run the test. \n",
     "\n",
-    "This function can likely be wrapped in another, one that calls your code to generate that input to check against. This isn't required, but will likely make things easier. "
+    "This function can likely be wrapped in another, one that calls your code to generate that input to check against. This isn't required, but will likely make things easier to call and test repeatedly. You'd have to do everything required to get the \"response\" argument, which is the CSV file of your answers. "
    ]
   },
   {
