--- a/assignment_2_start.ipynb
+++ b/assignment_2_start.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1046,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,15 @@
     "    ## Note: other things will be needed depending on how you implement your work. \n",
     "    ## As long as you make things work and meet anything explicitly stated in the assignment, you can add whatever you want.\n",
     "    def __init__(self, name, threshold, iterable, trim=3):\n",
-    "        pass\n",
+    "        self.elements = []\n",
+    "        self._name = name\n",
+    "        self._threshold = threshold\n",
+    "        for value in iterable:\n",
+    "            if value not in self.elements:\n",
+    "                self.elements.append(value)\n",
+    "        self._trim = trim\n",
+    "\n",
+    "\n",
     "\n",
     "    # Loading Data into Lists\n",
     "    # You should write a function to read data, and generate the lists.\n",
@@ -414,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
