--- a/assignment_2_start.ipynb
+++ b/assignment_2_start.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "from collections.abc import MutableSequence\n",
     "import pandas as pd\n",
     "from abc import ABC, abstractmethod\n",
+    "import statistics as stats\n",
     "\n",
     "import math"
    ]
@@ -178,7 +179,14 @@
     "        pass\n",
     "\n",
     "    def prune(self):\n",
-    "        pass\n",
+    "        while len(self.elements) > 0 and np.std(self.elements) > self.threshold:\n",
+    "        # Find the index of the element with the highest impact on standard deviation\n",
+    "            max_index = max(range(len(self.elements)), key=lambda i: abs(self.elements[i] - np.mean(self.elements)))\n",
+    "\n",
+    "        # Remove the element with the highest impact on standard deviation\n",
+    "            self.elements.pop(max_index)\n",
+    "\n",
+    "        return self.elements\n",
     "\n",
     "    def isPruned(self):\n",
     "        pass\n",
@@ -190,14 +198,23 @@
     "class meanList(calcList):\n",
     "    def __init__(self, name, threshold, iterable, trim=3):\n",
     "        super().__init__(name, threshold, iterable, trim)\n",
-    "    \n",
+    "        \n",
     "    def value(self):\n",
     "        pass\n",
     "\n",
     "    def prune(self):\n",
-    "        pass\n",
+    "        while len(self.elements) > 0 and sum(self.elements) / len(self.elements) > self.threshold:\n",
+    "        # Find the index of the element with the highest impact on mean\n",
+    "            max_index = max(range(len(self.elements)), key=lambda i: abs(self.elements[i] - (sum(self.elements) - self.elements[i]) / (len(self.elements) - 1)))\n",
+    "\n",
+    "        # Remove the element with the highest impact on mean\n",
+    "            self.elements.pop(max_index)\n",
+    "\n",
+    "        return self.elements\n",
     "\n",
     "    def isPruned(self):\n",
+    "        #If value >= threshold return True\n",
+    "        #Else return False\n",
     "        pass\n",
     "\n",
     "    def returnType(self):\n",
@@ -212,7 +229,14 @@
     "        pass\n",
     "\n",
     "    def prune(self):\n",
-    "        pass\n",
+    "        while len(self.elements) > 0 and sum(self.elements) > self.threshold:\n",
+    "        # Find the index of the element with the highest impact on sum\n",
+    "            max_index = self.elements.index(max(self.elements, key=lambda x: abs(x - self.threshold)))\n",
+    "\n",
+    "        # Remove the element with the highest impact on sum\n",
+    "            self.elements.pop(max_index)\n",
+    "\n",
+    "        return self.elements\n",
     "\n",
     "    def isPruned(self):\n",
     "        pass\n",
@@ -224,18 +248,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['List_0', 'stdList', 30.196057693808733, 92, 50.0, 65.0, 86.0, 75.0]"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['List_0', 'stdList', 30.196057693808733]\n",
+      "[92.0, 50.0, 65.0, 86.0, 75.0] 15.001333274079341 15.001333274079341\n"
+     ]
     }
    ],
    "source": [
@@ -248,15 +270,38 @@
     "calc_type = row1['Type']\n",
     "threshold = row1['Threshold']\n",
     "list1 = []\n",
+    "list2 = [] \n",
     "\n",
     "list1.append(name)\n",
     "list1.append(calc_type)\n",
     "list1.append(threshold)\n",
     "for i, value in row1.items():\n",
     "    if 'Value' in i and pd.notna(value):\n",
-    "        list1.append(value)\n",
+    "        list2.append(float(value))\n",
     "\n",
     "list1\n",
+    "\n",
+    "\n",
+    "def prune(list, threshold):\n",
+    "    \n",
+    "    while len(list) > 0 and np.std(list) > threshold:\n",
+    "        # Find the index of the element with the highest impact on standard deviation\n",
+    "        max_index = max(range(len(list)), key=lambda i: abs(list[i] - np.mean(list)))\n",
+    "\n",
+    "        # Remove the element with the highest impact on standard deviation\n",
+    "        list.pop(max_index)\n",
+    "    return list\n",
+    "\n",
+    "print(list1)\n",
+    "prune(list2, threshold)\n",
+    "#sd = np.std([5,56])\n",
+    "#print(sd)\n",
+    "one = stats.stdev([1,2,3,4,5,6,7,8,9,10])\n",
+    "two = np.std([1,2,3,4,5,6,7,8,9,10])\n",
+    "new = prune([1,2,3,4,5,6,7,8,9,10], 2)\n",
+    "test = prune(list2, threshold)\n",
+    "print(test, np.std(test), np.std(list2))\n",
+    "\n",
     "\n",
     "#for i, row in lists.iterrows():"
    ]
