--- a/assignment_2_start.ipynb
+++ b/assignment_2_start.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,9 @@
      "output_type": "stream",
      "text": [
       "['List_0', 'stdList', 30.196057693808733]\n",
-      "[92.0, 50.0, 65.0, 86.0, 75.0] 15.001333274079341 15.001333274079341\n"
+      "[92.0, 50.0, 65.0, 86.0, 75.0] 15.001333274079341 15.001333274079341\n",
+      "3.0276503540974917 2.8722813232690143\n",
+      "25.5\n"
      ]
     }
    ],
@@ -301,6 +303,8 @@
     "new = prune([1,2,3,4,5,6,7,8,9,10], 2)\n",
     "test = prune(list2, threshold)\n",
     "print(test, np.std(test), np.std(list2))\n",
+    "print(one, two)\n",
+    "print(np.std([5,56]))\n",
     "\n",
     "\n",
     "#for i, row in lists.iterrows():"
