--- a/assignment_2_start.ipynb
+++ b/assignment_2_start.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,13 +179,16 @@
     "        pass\n",
     "\n",
     "    def prune(self):\n",
+    "        start_index = 3\n",
+    "        value_list = [value for value in self.elements[start_index:] if isinstance(value, (int, float))]\n",
     "        while len(self.elements) > 0 and np.std(self.elements) > self.threshold:\n",
     "        # Find the index of the element with the highest impact on standard deviation\n",
     "            max_index = max(range(len(self.elements)), key=lambda i: abs(self.elements[i] - np.mean(self.elements)))\n",
     "\n",
     "        # Remove the element with the highest impact on standard deviation\n",
     "            self.elements.pop(max_index)\n",
-    "\n",
+    "        value = np.std(value_list)\n",
+    "        self.elements.append(value)\n",
     "        return self.elements\n",
     "\n",
     "    def isPruned(self):\n",
@@ -248,17 +251,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['List_0', 'stdList', 30.196057693808733]\n",
-      "[92.0, 50.0, 65.0, 86.0, 75.0] 15.001333274079341 15.001333274079341\n",
-      "3.0276503540974917 2.8722813232690143\n",
-      "25.5\n"
+      "['List_0', 'stdList', 30.196057693808733, 92.0, 50.0, 65.0, 86.0, 75.0, 15.001333274079341, 5]\n"
      ]
     }
    ],
@@ -267,44 +267,46 @@
     "file = 'inputs.csv'\n",
     "lists = pd.read_csv(file)\n",
     "\n",
-    "row1 = lists.loc[0]\n",
-    "name = row1['Name']\n",
-    "calc_type = row1['Type']\n",
-    "threshold = row1['Threshold']\n",
-    "list1 = []\n",
-    "list2 = [] \n",
-    "\n",
-    "list1.append(name)\n",
-    "list1.append(calc_type)\n",
-    "list1.append(threshold)\n",
-    "for i, value in row1.items():\n",
-    "    if 'Value' in i and pd.notna(value):\n",
-    "        list2.append(float(value))\n",
-    "\n",
-    "list1\n",
-    "\n",
-    "\n",
-    "def prune(list, threshold):\n",
-    "    \n",
-    "    while len(list) > 0 and np.std(list) > threshold:\n",
-    "        # Find the index of the element with the highest impact on standard deviation\n",
-    "        max_index = max(range(len(list)), key=lambda i: abs(list[i] - np.mean(list)))\n",
-    "\n",
-    "        # Remove the element with the highest impact on standard deviation\n",
-    "        list.pop(max_index)\n",
+    "def pull_info(lists, row):\n",
+    "    list = []\n",
+    "    row = lists.loc[row]\n",
+    "    name = row['Name']\n",
+    "    calc_type = row['Type']\n",
+    "    threshold = row['Threshold']\n",
+    "    list.append(name)\n",
+    "    list.append(calc_type)\n",
+    "    list.append(threshold)\n",
+    "    for i, value in row.items():\n",
+    "        if 'Value' in i and pd.notna(value):\n",
+    "            list.append(float(value))\n",
     "    return list\n",
     "\n",
-    "print(list1)\n",
-    "prune(list2, threshold)\n",
-    "#sd = np.std([5,56])\n",
-    "#print(sd)\n",
-    "one = stats.stdev([1,2,3,4,5,6,7,8,9,10])\n",
-    "two = np.std([1,2,3,4,5,6,7,8,9,10])\n",
-    "new = prune([1,2,3,4,5,6,7,8,9,10], 2)\n",
-    "test = prune(list2, threshold)\n",
-    "print(test, np.std(test), np.std(list2))\n",
-    "print(one, two)\n",
-    "print(np.std([5,56]))\n",
+    "list1 = pull_info(lists,0)\n",
+    "\n",
+    "def prune(list):\n",
+    "    threshold = list[2]\n",
+    "    start_index = 3\n",
+    "    value_list = [value for value in list[start_index:] if isinstance(value, (int, float))]\n",
+    "    del list[start_index:]\n",
+    "    while len(value_list) > 0 and np.std(value_list) > threshold:\n",
+    "        # Find the index of the element with the highest impact on standard deviation\n",
+    "        max_index = max(range(len(list)), key=lambda i: abs(value_list[i] - np.mean(value_list)))\n",
+    "\n",
+    "        # Remove the element with the highest impact on standard deviation\n",
+    "        value_list.pop(max_index)\n",
+    "    value = np.std(value_list)\n",
+    "    length = len(value_list)\n",
+    "    for i in value_list:\n",
+    "        list.append(i)\n",
+    "    list.append(value)\n",
+    "    list.append(length)\n",
+    "    return list\n",
+    "\n",
+    "\n",
+    "\n",
+    "test = prune(list1)\n",
+    "print(test)\n",
+    "\n",
     "\n",
     "\n",
     "#for i, row in lists.iterrows():"
@@ -339,6 +341,24 @@
     "# Print the lists\n",
     "for i, row_list in enumerate(list_of_rows):\n",
     "    print(f\"Row {i + 1}: {row_list}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prune(list, threshold):\n",
+    "    \n",
+    "    while len(list) > 0 and np.std(list) > threshold:\n",
+    "        # Find the index of the element with the highest impact on standard deviation\n",
+    "        max_index = max(range(len(list)), key=lambda i: abs(list[i] - np.mean(list)))\n",
+    "\n",
+    "        # Remove the element with the highest impact on standard deviation\n",
+    "        list.pop(max_index)\n",
+    "    value = np.std(list) \n",
+    "    return list, value"
    ]
   },
   {
