--- a/assignment_2_start.ipynb
+++ b/assignment_2_start.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,18 +162,30 @@
     "        return self.elements\n",
     "            \n",
     "    def calculate(self):\n",
+    "        updated_elements = []\n",
+    "\n",
     "        for inner_list in self.elements:\n",
-    "            calc_type = inner_list[1]\n",
-    "            # Do the proper calculation based on the type of list\n",
-    "            if calc_type == 'stdList':\n",
-    "                std_list = stdList(inner_list[0], inner_list[2], inner_list[3:])\n",
-    "                std_list.prune()\n",
-    "            elif calc_type == 'meanList':\n",
-    "                mean_list = meanList(inner_list[0], inner_list[2], inner_list[3:])\n",
-    "                mean_list.prune()\n",
-    "            elif calc_type == 'sumList':\n",
-    "                sum_list = sumList(inner_list[0], inner_list[2], inner_list[3:])\n",
-    "                sum_list.prune()\n",
+    "            if isinstance(inner_list, list):\n",
+    "                # Extract relevant information from the inner list\n",
+    "                name = str(inner_list[0])\n",
+    "                threshold = str(inner_list[2])\n",
+    "                values = inner_list[3:]\n",
+    "\n",
+    "                # Do the proper calculation based on the type of list\n",
+    "                if self.returnType() == 'stdList':\n",
+    "                    std_list = stdList(name, threshold, values)\n",
+    "                    std_list.prune()\n",
+    "                    updated_elements.append(std_list.elements)\n",
+    "                elif self.returnType() == 'meanList':\n",
+    "                    mean_list = meanList(name, threshold, values)\n",
+    "                    mean_list.prune()\n",
+    "                    updated_elements.append(mean_list.elements)\n",
+    "                elif self.returnType() == 'sumList':\n",
+    "                    sum_list = sumList(name, threshold, values)\n",
+    "                    sum_list.prune()\n",
+    "                    updated_elements.append(sum_list.elements)\n",
+    "                \n",
+    "        self.elements = updated_elements\n",
     "        return self.elements\n",
     "        \n",
     "    def csv_output(self):\n",
@@ -182,12 +194,13 @@
     "            f.write(\"Name,Length,Threshold,Value\\n\")\n",
     "            # Isolate the necessary info\n",
     "            for inner_list in self.elements:\n",
-    "                name = inner_list[0]\n",
-    "                length = inner_list[4]\n",
-    "                threshold = inner_list[2]\n",
-    "                value = inner_list[3]\n",
+    "                name = str(inner_list[0]) \n",
+    "                length = str(inner_list[4]) \n",
+    "                threshold = str(inner_list[2]) \n",
+    "                value = str(inner_list[3])\n",
     "                # Convert values to strings and write to the file\n",
     "                f.write(f\"{name},{length},{threshold},{value}\\n\")\n",
+    "\n",
     "    \n",
     "    # These methods must be implemented in the child classes\n",
     "    # There may be other methods you want to add as well\n",
@@ -219,7 +232,7 @@
     "\n",
     "    def prune(self):\n",
     "        list = self.elements\n",
-    "        threshold = self.setThreshold(self.__getitem__(2))\n",
+    "        threshold = self.getThreshold()\n",
     "        start_index = 3\n",
     "        # Isolate the values to be pruned \n",
     "        value_list = [value for value in list[start_index:] if isinstance(value, (int, float)) and value is not None]\n",
@@ -238,7 +251,7 @@
     "        return list\n",
     "\n",
     "    def isPruned(self):\n",
-    "        threshold = self.setThreshold(self.__getitem__(2))\n",
+    "        threshold = self.getThreshold()\n",
     "        if self.value < threshold:\n",
     "            return True\n",
     "        else:\n",
@@ -257,7 +270,7 @@
     "\n",
     "    def prune(self):\n",
     "        list = self.elements\n",
-    "        threshold = self.setThreshold(self.__getitem__(2))\n",
+    "        threshold = self.getThreshold()\n",
     "        start_index = 3\n",
     "        # Isolate the values to be pruned\n",
     "        value_list = [value for value in list[start_index:] if isinstance(value, (int, float)) and value is not None]\n",
@@ -277,7 +290,7 @@
     "        return list\n",
     "\n",
     "    def isPruned(self):\n",
-    "        threshold = self.setThreshold(self.__getitem__(2))\n",
+    "        threshold = self.getThreshold()\n",
     "        if self.value < threshold:\n",
     "            return True\n",
     "        else:\n",
@@ -296,7 +309,7 @@
     "\n",
     "    def prune(self, list):\n",
     "        list = self.elements\n",
-    "        threshold = self.setThreshold(self.__getitem__(2))\n",
+    "        threshold = self.getThreshold()\n",
     "        start_index = 3\n",
     "        # Isolate the values to be pruned\n",
     "        value_list = [value for value in list[start_index:] if isinstance(value, (int, float)) and value is not None]\n",
@@ -317,7 +330,7 @@
     "        \n",
     "\n",
     "    def isPruned(self):\n",
-    "        threshold = self.setThreshold(self.__getitem__(2))\n",
+    "        threshold = self.getThreshold()\n",
     "        if self.value < threshold:\n",
     "            return True\n",
     "        else:\n",
@@ -326,14 +339,7 @@
     "    def returnType(self):\n",
     "       return 'sumList'\n",
     "\n",
-    "# I feel like I have the individual parts working like loading the file and pruning, but I am not able to figure out how to connect them together properly\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "I feel like I have the individual parts working like loading the file and pruning, but I am not able to figure out how to connect them together"
+    "# I feel like I have the individual parts working like loading the file and pruning, but I am not able to figure out how to connect them together properly when it comes to the classes\n"
    ]
   },
   {
@@ -471,88 +477,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculationListLoader(file):\n",
+    "    df= pd.read_csv(file)\n",
+    "    return df\n",
+    "\n",
+    "     \n",
+    "\n",
+    "def processCalculationLists(input, output):\n",
+    "    input_data = pd.read_csv(input)\n",
+    "\n",
+    "    # Create an empty list to store instances of calcList subclasses\n",
+    "    processed_lists = []\n",
+    "\n",
+    "    # Iterate over rows in the input data\n",
+    "    for _, row in input_data.iterrows():\n",
+    "        # Extract information from the row\n",
+    "        name = row['Name']\n",
+    "        calc_type = row['Type']\n",
+    "        threshold = row['Threshold']\n",
+    "        values = [value for key, value in row.items() if 'Value' in key and pd.notna(value)]\n",
+    "\n",
+    "        # Create an instance of the appropriate subclass\n",
+    "        if calc_type == 'stdList':\n",
+    "            my_list = stdList(name=name, threshold=threshold, iterable=values)\n",
+    "        elif calc_type == 'meanList':\n",
+    "            my_list = meanList(name=name, threshold=threshold, iterable=values)\n",
+    "        elif calc_type == 'sumList':\n",
+    "            my_list = sumList(name=name, threshold=threshold, iterable=values)\n",
+    "        else:\n",
+    "            raise ValueError(f\"Unsupported calculation type: {calc_type}\")\n",
+    "\n",
+    "        # Load data, perform calculations\n",
+    "        my_list.load_data(input)\n",
+    "        my_list.calculate()\n",
+    "        processed_lists.append(my_list)\n",
+    "    # Write to a file\n",
+    "    my_list.csv_output()\n",
+    "    return processed_lists\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Length</th>\n",
-       "      <th>Threshold</th>\n",
-       "      <th>Value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>List_0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>30.19605769</td>\n",
-       "      <td>15.001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>List_1</td>\n",
-       "      <td>9</td>\n",
-       "      <td>37.83299154</td>\n",
-       "      <td>29.911</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>List_2</td>\n",
-       "      <td>44</td>\n",
-       "      <td>42.90158192</td>\n",
-       "      <td>42.091</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>List_3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-1428.622569</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>List_4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>13.75396487</td>\n",
-       "      <td>12.75</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Name Length     Threshold   Value\n",
-       "0  List_0      5   30.19605769  15.001\n",
-       "1  List_1      9   37.83299154  29.911\n",
-       "2  List_2     44   42.90158192  42.091\n",
-       "3  List_3      2  -1428.622569     0.0\n",
-       "4  List_4      8   13.75396487   12.75"
-      ]
-     },
-     "execution_count": 1052,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "processCalculationLists() got an unexpected keyword argument 'output_file'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[63], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Sample exectution - you can change this to test your code\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# The functions here are things I made to both:\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# - read data from disk, and create a list of the calculation lists.\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# - process those lists to get actual outputs. \u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m outputs \u001b[38;5;241m=\u001b[39m \u001b[43mprocessCalculationLists\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcalculationListLoader\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43minputs.csv\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutput_file\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43moutput.csv\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m outputs\u001b[38;5;241m.\u001b[39mhead()\n",
+      "\u001b[1;31mTypeError\u001b[0m: processCalculationLists() got an unexpected keyword argument 'output_file'"
+     ]
     }
    ],
    "source": [
@@ -560,8 +543,8 @@
     "# The functions here are things I made to both:\n",
     "# - read data from disk, and create a list of the calculation lists.\n",
     "# - process those lists to get actual outputs. \n",
-    "#outputs = processCalculationLists(calculationListLoader(\"inputs.csv\"), output_file=\"output.csv\")\n",
-    "#outputs.head()"
+    "outputs = processCalculationLists(calculationListLoader(\"inputs.csv\"), output_file=\"output.csv\")\n",
+    "outputs.head()"
    ]
   },
   {
